# clap2man

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: fill.rs  lib.rs  wrapper.rs
tests/: integration_test.rs
